########################################################
# Files

SET (IMAGE_RCCS images.qrc)

########################################################
# Build


########################################################
# Continue on to subdirs
ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(themes)
ADD_SUBDIRECTORY(svg)
