
# for included scripts that set policies
INSTALL (CODE "cmake_policy(SET CMP0011 NEW)")

IF(MSVC AND NOT USING_NMAKE)
  SET(CRSSYNC "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/crssync.exe")
ELSE(MSVC AND NOT USING_NMAKE)
  SET(CRSSYNC "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/crssync")
ENDIF(MSVC AND NOT USING_NMAKE)

CONFIGURE_FILE("PostInstall.cmake.in" "PostInstall.cmake" @ONLY)
INSTALL(SCRIPT "${CMAKE_BINARY_DIR}/postinstall/PostInstall.cmake")
